--- a/package.json
+++ b/package.json
@@ -38,8 +38,6 @@
     "copy-to-clipboard": "^3.2.0",
     "cross-env": "^7.0.2",
     "eslint": "^7.11.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^4.0.0",
     "ethers": "^5.2.0",
@@ -53,7 +51,6 @@
     "multihashes": "^4.0.2",
     "node-vibrant": "^3.1.5",
     "polished": "^3.3.2",
-    "prettier": "^2.2.1",
     "qs": "^6.9.4",
     "react": "^17.0.1",
     "react-device-detect": "^1.6.2",
@@ -93,7 +90,7 @@
   },
   "scripts": {
     "build": "react-scripts build",
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "test": "react-scripts test --env=jsdom"
   },
   "eslintConfig": {
